# pp-demo-backlog-buddy

./: .cursorrules  .gitignore  README.md
backend/: db.sqlite3  pyproject.toml
backend/backlog/: admin.py  api.py  models.py  schemas.py
backend/backlog/management/commands/: generate_issues.py
backend/backlog/migrations/: 0001_initial.py
backend/bb_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BacklogItem.tsx  ClarityModal.tsx  LoginPage.tsx  StatCard.tsx
frontend/src/hooks/: useBacklogIssues.ts
